--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <title></title>
 
     <link href="http://fonts.googleapis.com/css?family=Lato%3A100%2C300" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Cookie' rel='stylesheet' type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
